--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,39 +1,74 @@
 workflows:
   ios-workflow:
-    name: iOS Workflow
+    name: iOS -> TestFlight
     max_build_duration: 60
     instance_type: mac_mini_m1
+
     environment:
-      ios_signing:
-        distribution_type: app_store
-        bundle_identifier: com.pannasignals.app
-      vars:
-        XCODE_WORKSPACE: "Runner.xcworkspace"
-        XCODE_SCHEME: "Runner"
-        BUNDLE_ID: "com.pannasignals.app"
       flutter: stable
       xcode: latest
       cocoapods: default
+
+      ios_signing:
+        distribution_type: app_store
+        bundle_identifier: com.panna.signalsApp
+
+      vars:
+        BUNDLE_ID: "com.panna.signalsApp"
+        XCODE_WORKSPACE: "Runner.xcworkspace"
+        XCODE_SCHEME: "Runner"
+        BUILD_NAME: "1.0.2"
+        BUILD_NUMBER: "3"
+
     scripts:
-      - name: Set up code signing settings on Xcode project
+      - name: Verify bundle id in project (debug helper)
         script: |
-          xcode-project use-profiles
+          echo "=== PRODUCT_BUNDLE_IDENTIFIER (project.pbxproj) ==="
+          grep -n "PRODUCT_BUNDLE_IDENTIFIER" ios/Runner.xcodeproj/project.pbxproj | head -n 30
+          echo "=== Searching com.example in ios folder (should be empty) ==="
+          grep -R "com.example" -n ios | head -n 20 || true
+
+      - name: Fetch signing files (App Store) + apply profiles
+        script: |
+          keychain initialize
+
+          app-store-connect fetch-signing-files $BUNDLE_ID \
+            --create \
+            --type IOS_APP_STORE \
+            --platform IOS \
+            --issuer-id $APP_STORE_CONNECT_ISSUER_ID \
+            --key-id $APP_STORE_CONNECT_KEY_IDENTIFIER \
+            --private-key @env:APP_STORE_CONNECT_PRIVATE_KEY \
+            --certificate-key @env:CERTIFICATE_PRIVATE_KEY
+
+          keychain add-certificates
+
+          # Important: force App Store method (not ad-hoc)
+          xcode-project use-profiles --project ios/Runner.xcodeproj --archive-method app-store
+
       - name: Get Flutter packages
         script: |
-          flutter packages pub get
-      - name: Install pods
+          flutter pub get
+
+      - name: Install Pods
         script: |
-          find . -name "Podfile" -execdir pod install \;
-      - name: Flutter build ipa
+          cd ios
+          pod install
+          cd ..
+
+      - name: Build IPA (Release / App Store)
         script: |
+          flutter clean
           flutter build ipa --release \
-            --build-name=1.0.2 \
-            --build-number=3 \
+            --build-name=$BUILD_NAME \
+            --build-number=$BUILD_NUMBER \
             --export-options-plist=/Users/builder/export_options.plist
+
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
       - flutter_drive.log
+
     publishing:
       email:
         recipients:
@@ -41,24 +76,33 @@ workflows:
         notify:
           success: true
           failure: true
+
       app_store_connect:
         api_key: $APP_STORE_CONNECT_PRIVATE_KEY
         key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER
         issuer_id: $APP_STORE_CONNECT_ISSUER_ID
         submit_to_testflight: true
 
+
   android-workflow:
-    name: Android Workflow  
+    name: Android Workflow
     max_build_duration: 60
+
     environment:
-      android_signing:
-        - pannasignals_keystore
-      groups:
-        - google_play
-      vars:
-        PACKAGE_NAME: "com.pannasignals.app"
       flutter: stable
       java: 17
+
+      android_signing:
+        - pannasignals_keystore
+
+      groups:
+        - google_play
+
+      vars:
+        PACKAGE_NAME: "com.panna.signalsApp"
+        BUILD_NAME: "1.0.2"
+        BUILD_NUMBER: "3"
+
     scripts:
       - name: Set up key.properties
         script: |
@@ -66,18 +110,23 @@ workflows:
           echo "keyPassword=pannaSignals2024" >> $CM_BUILD_DIR/android/key.properties
           echo "keyAlias=upload" >> $CM_BUILD_DIR/android/key.properties
           echo "storeFile=$CM_KEYSTORE_PATH" >> $CM_BUILD_DIR/android/key.properties
+
       - name: Get Flutter packages
         script: |
-          flutter packages pub get
+          flutter pub get
+
       - name: Build AAB
         script: |
+          flutter clean
           flutter build appbundle --release \
-            --build-name=1.0.2 \
-            --build-number=3
+            --build-name=$BUILD_NAME \
+            --build-number=$BUILD_NUMBER
+
     artifacts:
       - build/**/outputs/**/*.aab
       - build/**/outputs/**/mapping.txt
       - flutter_drive.log
+
     publishing:
       email:
         recipients:
@@ -85,6 +134,7 @@ workflows:
         notify:
           success: true
           failure: true
+
       google_play:
         credentials: $GCLOUD_SERVICE_ACCOUNT_CREDENTIALS
         track: internal
