--- a/ios/Runner/GoogleService-Info.plist
+++ b/ios/Runner/GoogleService-Info.plist
@@ -9,7 +9,7 @@
 	<key>PLIST_VERSION</key>
 	<string>1</string>
 	<key>BUNDLE_ID</key>
-	<string>com.pannasignals.app</string>
+	<string>com.panna.signalsApp</string>
 	<key>PROJECT_ID</key>
 	<string>signal-app-be549</string>
 	<key>STORAGE_BUCKET</key>
@@ -25,6 +25,6 @@
 	<key>IS_SIGNIN_ENABLED</key>
 	<true></true>
 	<key>GOOGLE_APP_ID</key>
-	<string>1:224061025434:ios:51bdc3c71db925876dc323</string>
+	<string>1:224061025434:ios:c75d60708c7108fe6dc323</string>
 </dict>
 </plist>
