Fix iOS App Store signing (remove certificate-key) + unique build number

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -18,9 +18,14 @@ workflows:
       vars:
         BUNDLE_ID: "com.panna.signalsApp"
         BUILD_NAME: "1.0.2"
-        BUILD_NUMBER: "4" # fallback (do të mbishkruhet automatikisht)
 
     scripts:
+      - name: Set unique build number (avoid duplicate uploads)
+        script: |
+          BUILD_NUMBER=$(date +%Y%m%d%H%M%S)
+          echo "BUILD_NUMBER=$BUILD_NUMBER" >> "$CM_ENV"
+          echo "Using BUILD_NAME=$BUILD_NAME BUILD_NUMBER=$BUILD_NUMBER"
+
       - name: Verify bundle id in project (debug helper)
         script: |
           echo "=== PRODUCT_BUNDLE_IDENTIFIER (project.pbxproj) ==="
@@ -28,21 +33,29 @@ workflows:
           echo "=== Searching com.example in ios folder (should be empty) ==="
           grep -R "com.example" -n ios | head -n 20 || true
 
-      - name: Fetch signing files (App Store) + apply profiles
+      - name: Fetch signing files (App Store) + apply profiles  ✅ FIXED
         script: |
           keychain initialize
 
+          # IMPORTANT: mos përdor --certificate-key këtu (shkakton mismatch / dev cert)
           app-store-connect fetch-signing-files "$BUNDLE_ID" \
             --create \
             --type IOS_APP_STORE \
             --platform IOS \
             --issuer-id "$APP_STORE_CONNECT_ISSUER_ID" \
             --key-id "$APP_STORE_CONNECT_KEY_IDENTIFIER" \
-            --private-key @env:APP_STORE_CONNECT_PRIVATE_KEY \
-            --certificate-key @env:CERTIFICATE_PRIVATE_KEY
+            --private-key @env:APP_STORE_CONNECT_PRIVATE_KEY
 
           keychain add-certificates
+
+          # Apliko profile në projekt për archive app-store
           xcode-project use-profiles --project ios/Runner.xcodeproj --archive-method app-store
+
+          echo "=== Codesigning identities ==="
+          security find-identity -v -p codesigning | head -n 30 || true
+
+          echo "=== Provisioning Profiles ==="
+          ls -la "$HOME/Library/MobileDevice/Provisioning Profiles" || true
 
       - name: Get Flutter packages
         script: |
@@ -53,26 +66,6 @@ workflows:
           cd ios
           pod install
           cd ..
-
-      - name: Set unique build number (avoid duplicate uploads)
-        script: |
-          BUILD_NUMBER=$(date +%Y%m%d%H%M)
-          echo "BUILD_NUMBER=$BUILD_NUMBER" >> "$CM_ENV"
-          echo "Using BUILD_NAME=$BUILD_NAME BUILD_NUMBER=$BUILD_NUMBER"
-
-      - name: Set version in pubspec.yaml
-        script: |
-          python3 - << 'PY'
-          import re, pathlib, os
-          p = pathlib.Path("pubspec.yaml")
-          txt = p.read_text(encoding="utf-8")
-          build_name = os.environ.get("BUILD_NAME", "1.0.2")
-          build_number = os.environ.get("BUILD_NUMBER", "4")
-          txt2 = re.sub(r'^version:\s*.*$', f'version: {build_name}+{build_number}', txt, flags=re.M)
-          p.write_text(txt2, encoding="utf-8")
-          print("✅ pubspec.yaml version set to:", f"{build_name}+{build_number}")
-          PY
-          grep -n "^version:" pubspec.yaml || true
 
       - name: Create export_options.plist
         script: |
@@ -94,14 +87,16 @@ workflows:
           </dict>
           </plist>
           PLIST
-          echo "✅ export_options.plist created:"
           ls -la export_options.plist
 
       - name: Build IPA (App Store)
         script: |
           flutter clean
           flutter pub get
-          flutter build ipa --export-options-plist=export_options.plist
+          flutter build ipa --release \
+            --export-options-plist=export_options.plist \
+            --build-name="$BUILD_NAME" \
+            --build-number="$BUILD_NUMBER"
 
     artifacts:
       - build/ios/ipa/*.ipa
@@ -117,7 +112,8 @@ workflows:
           failure: true
 
       app_store_connect:
-        api_key: $APP_STORE_CONNECT_PUBLISHER_PRIVATE_KEY
+        # përdor të njëjtin key që përdore edhe te fetch-signing-files
+        api_key: $APP_STORE_CONNECT_PRIVATE_KEY
         key_id: $APP_STORE_CONNECT_KEY_IDENTIFIER
         issuer_id: $APP_STORE_CONNECT_ISSUER_ID
         submit_to_testflight: true
