--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -10,13 +10,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^1.2.0
+  http: ^latest
   shared_preferences: ^2.2.2
   intl: ^0.19.0
 
   # Firebase
-  firebase_core: ^4.2.1
-  firebase_messaging: ^16.0.4
+  firebase_core: ^latest
+  firebase_messaging: ^latest
+    package_info_plus: ^latest
   firebase_auth: ^6.1.2
   firebase_analytics: ^12.0.4
   firebase_crashlytics: ^5.0.5
